--- a/example.css
+++ b/example.css
@@ -5,18 +5,46 @@ body{
   font-size: 18px;  
   background: #f6f6f6;
 }
+
+ code {
+   font-size: .8em;
+   background: #f6f6f6;
+   display: inline;
+ }
+ pre { border-left: 2px solid rgb(62, 80, 180);  }
+ pre code {
+   display: block;
+   padding: .5em;
+ }
+
  #main {
   width: 75%;
   max-width: 36em;
   margin: 0 auto;
   height: 100%;
  }
+ #main h3 { text-align: center; }
  #readme {
-   width: 50%;
-   min-width: 700px;
+   width: 75%;
+  max-width: 36em;
    height: 100%;
    margin: 4em auto;
  } 
+ @media (max-width: 767px) {
+ body {
+   font-size: 24px;
+ }
+ #main {
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+ }
+ #readme {
+   width: 100%;
+   height: 100%;
+   margin: 4em auto;
+ } 
+}
 .white-frame {
   background-clip: border-box;
   background-origin: padding-box;
